solc_ossfuzz_seed_corpus/test_sol/test_68af0c987b2b7c45d693ae377a8424772dfd796c1d90de2b1ee01b01163f877e_278f937d5b8e4308d2f0c287f0416bcd24971650_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  fallback() external   
  {
    function (int136[5][3][] memory, int72, address) internal   l0;
    uint200[] storage l1;
    unchecked {
      l1[l1.length] &= uint200(0);
      (bool l2, bytes memory l3) = address(this).call(bytes("ffffffffffffffff000000000000"));
      [bytes7(0x00000000000000), bytes7(0xb18ab6d24407a0), bytes7(0xffffffffffffff)];
    }
  }
  function f1(int8 i0) public   payable
  {
  }
  int216  public s0;
  bool   s1;
  bytes24   s2 = bytes24(0xffffffffffffffffffffffffffffffffffffffffffffffff);
  bytes5  public s3;
  constructor(int216 i0,bool i1,bytes5 i2)   {
    s0 &= int216(50372331484674058619705151720637329460849842052140497218782932467);
    s1 = true;
    s3 |= bytes5(0x0000000000);
    {
      (bool l0, bytes memory l1) = address(this).call(abi.encodeWithSelector(this.f1.selector, ((false ? int8((((int8(0) ** uint8(uint8(255))) + int8(-122)) / int8(0))) : int8(0)) & int8(127))));
    }
  }
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
// ----
// TypeError 3464: (su0.sol:185-187): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
// TypeError 3464: (su0.sol:188-190): This variable is of storage pointer type and can be accessed without prior assignment, which would lead to undefined behaviour.
